# apischema

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  generate_tests_from_examples.py  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini  versions.json
.github/: FUNDING.yml  dependabot.yml
0.15/: 404.html  index.html  sitemap.xml
0.16/: 404.html  index.html
0.17/: 404.html  index.html  sitemap.xml
0.18/: 404.html  index.html  sitemap.xml
0.19/: 404.html  index.html
apischema/: __init__.py  alias.py  aliases.py  cache.py  constraints.py  conversion.py  data.py  dataclass_utils.py  dataclasses.py  dependencies.py  dependent_required.py  deserialization.py  discriminators.py  fields.py  ignore.py  methods.py  objects.py  ordering.py  properties.py  recursion.py  resolvers.py  schema.py  schemas.py  serialization.py  settings.py  skip.py  spec.py  std_types.py  tagged_unions.py  type_checker.py  type_names.py  type_vars.py  types.py  typing.py  utils.py  validation.py  validator.py  visitor.py
benchmark/: common.py  data.json  index.html  main.py  requirements.txt
changelog/: index.html
code_generation_from_schema/: index.html
configuration_management/: index.html
conversions/: index.html
data_model/: index.html
de_serialization/: index.html
dev/: index.html
difference_with_pydantic/: index.html
docs/: benchmark.md  changelog.md  configuration_management.md  conversions.md  data_model.md  de_serialization.md  difference_with_pydantic.md  index.md  json_schema.md  optimizations_and_benchmark.md  (+4 more)
(+608 files in other folders)
